Bug 1792860 - Deal better with canvases without styles. r=lsalzman,gfx-reviewers

When an element is out of the flat tree we should treat it the same as
when it is out of the document, it has no meaningful style.

Differential Revision: https://phabricator.services.mozilla.com/D175030